--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,6 +1,8 @@
 * {
     margin: 0;
     padding: 0;
+    font-size: 29px;
+    color: grey;
 }
 
 body {
@@ -9,28 +11,29 @@ body {
 
 .bannerPic img {
     width: 50%;
-    position: absolute;
+    position: fixed;
     left: 0px;
     height: 100%;
+    background-attachment: fixed;
 }
 
 #rightHalf {
     width: 48%;
     position: absolute;
     right: 0px;
+    text-align: center;
+    background-attachment: scroll;
 }
 
 .about {
-    padding-left: 50%;
     text-align: center;
     background-attachment: scroll;
+    margin-top: 150px;
 }
 
 .about p {
     color: grey;
     font-size: 29px;
-    position: relative;
-    top: -650px;
 }
 
 .about a {
@@ -38,7 +41,25 @@ body {
     color: black;
     text-decoration: underline;
     font-weight: bold;
-    position: relative;
-    top: -620px;
 }
 
+.project-list li {
+    list-style-type: circle;
+    list-style-position: inside;
+}
+
+.fa {
+    padding: 20px;
+    font-size: 30px;
+    width: 50px;
+    text-align: center;
+    text-decoration: none;
+  }
+
+  .fa-linkedin {
+    margin-bottom: 5px;
+  }
+
+  .social {
+    display: inline;
+  }
