--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,74 +1,41 @@
-* {
-    margin: 0;
-    padding: 0;
-    font-size: 29px;
-    color: grey;
-}
-
-body {
-    font-family: Poppins, sans-serif;
-}
-
-.bannerPic img {
-    width: 50%;
-    position: fixed;
-    left: 0px;
+/* Stylesheet for desktop screens */
+body, html {
     height: 100%;
-    background-attachment: fixed;
+    margin: 0;
+    font-family: 'Poppins', sans-serif;
+}
+
+.bannerPic {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    width: 50%;
+    background: url('./Files/bannerpicture.JPG') no-repeat center center;
+    background-size: cover;
 }
 
 #rightHalf {
-    width: 48%;
     position: absolute;
-    right: 0px;
-    text-align: center;
-    background-attachment: scroll;
-}
-
-.about {
-    text-align: center;
-    background-attachment: scroll;
-    margin-top: 150px;
-}
-
-.about p {
-    color: grey;
-    font-size: 29px;
-}
-
-.projects a {
-    font-size: 29px;
-    color: black;
-    text-decoration: underline;
-    font-weight: bold;
-}
-
-.projects {
-    font-size: 23px;
-}
-
-.project-list li {
-    list-style-type: circle;
-    list-style-position: inside;
-}
-
-.fa {
+    top: 0;
+    bottom: 0;
+    right: 0;
+    width: 50%;
+    overflow-y: auto;
     padding: 20px;
-    font-size: 30px;
-    width: 50px;
-    text-align: center;
-    text-decoration: none;
-  }
+    box-sizing: border-box;
+}
 
-  .fa-linkedin {
-    margin-bottom: 5px;
-  }
+/* Stylesheet for mobile screens */
+@media screen and (max-width: 844px) {
+    .bannerPic {
+        position: relative;
+        width: 100%;
+        height: 300px;
+    }
 
-  .social {
-    display: inline-flex;
-  }
-
-  .social p {
-    margin-top: 25px;
-    font-size: 15px;
-  }
+    #rightHalf {
+        position: relative;
+        width: 100%;
+    }
+}
