--- a/stylesheet.css
+++ b/stylesheet.css
@@ -5,12 +5,21 @@ body, html {
     font-family: 'Poppins', sans-serif;
 }
 
+ul.skill-list {
+    list-style-type: none;
+    padding-left: 0;
+}
+
+ul.skill-list li {
+    font-size: 0.9em; /* Adjust the size as needed */
+}
+
 .bannerPic {
     position: fixed;
     top: 0;
     bottom: 0;
     left: 0;
-    width: 50%;
+    width: 45%;
     background: url('./Files/bannerpicture.JPG') no-repeat center center;
     background-size: cover;
 }
@@ -20,7 +29,7 @@ body, html {
     top: 0;
     bottom: 0;
     right: 0;
-    width: 50%;
+    width: 55%;
     overflow-y: auto;
     padding: 20px;
     box-sizing: border-box;
@@ -29,13 +38,15 @@ body, html {
 /* Stylesheet for mobile screens */
 @media screen and (max-width: 844px) {
     .bannerPic {
+        background: url('./Files/bannerpictureCrop.JPG') no-repeat center center;
+        background-size: cover;
         position: relative;
         width: 100%;
         height: 300px;
     }
-
     #rightHalf {
         position: relative;
         width: 100%;
+        padding: 20px;
     }
 }
