--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,6 +3,8 @@ body, html {
     height: 100%;
     margin: 0;
     font-family: 'Poppins', sans-serif;
+    color: grey;
+    font-size: 29px;
 }
 
 ul.skill-list {
