--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,10 +1,10 @@
 /* Stylesheet for desktop screens */
 body, html {
-    height: 100%;
     margin: 0;
-    font-family: 'Poppins', sans-serif;
+    font-size: 18px; /* Adjusted base font size */
     color: grey;
-    font-size: 29px;
+    height: 100%;
+    font-family: 'Poppins', sans-serif;
 }
 
 ul.skill-list {
@@ -21,7 +21,7 @@ ul.skill-list li {
     top: 0;
     bottom: 0;
     left: 0;
-    width: 45%;
+    width: 50%; /* Adjusted width */
     background: url('./Files/bannerpicture.JPG') no-repeat center center;
     background-size: cover;
 }
@@ -31,24 +31,9 @@ ul.skill-list li {
     top: 0;
     bottom: 0;
     right: 0;
-    width: 55%;
+    width: 50%; /* Adjusted width */
     overflow-y: auto;
     padding: 20px;
     box-sizing: border-box;
 }
 
-/* Stylesheet for mobile screens */
-@media screen and (max-width: 844px) {
-    .bannerPic {
-        background: url('./Files/bannerpictureCrop.JPG') no-repeat center center;
-        background-size: cover;
-        position: relative;
-        width: 100%;
-        height: 300px;
-    }
-    #rightHalf {
-        position: relative;
-        width: 100%;
-        padding: 20px;
-    }
-}
