--- a/stylesheet.css
+++ b/stylesheet.css
@@ -16,6 +16,12 @@ ul.skill-list li {
     font-size: 0.9em; /* Adjust the size as needed */
 }
 
+.skills a {
+    font-size: 29px;
+    color: black;
+    text-decoration: underline;
+    font-weight: bold;
+
 .bannerPic {
     position: fixed;
     top: 0;
